5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1692_1105.log
== SUBMITION (2019-04-25 18:37:59) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
elif(bra=="leao"):
	p="Lannister"
elif(bra=="veado"):
	p="Baratheon"
elif(bra=="dragao"):
	p="Targaryen"
elif(bra=="rosa"):
	p="Tyrell"
elif(bra=="sol"):
	p="Martell"
elif(bra=="lula"):
	p="Greyjoy"
elif(bra=="esfolado"):
	p="Bolton"
elif(bra=="turta"):
	p="Tully"
print("Entrada:", bra)	
print("Casa:", p)
else:
	print("Entrada:", bra)
	print("Brasao invalido")


	
-- EXECUTION TIME:
0.129289
-- ERROR:
  File "/home/codebench/codes/1692/1105/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:38:13) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
elif(bra=="leao"):
	p="Lannister"
elif(bra=="veado"):
	p="Baratheon"
elif(bra=="dragao"):
	p="Targaryen"
elif(bra=="rosa"):
	p="Tyrell"
elif(bra=="sol"):
	p="Martell"
elif(bra=="lula"):
	p="Greyjoy"
elif(bra=="esfolado"):
	p="Bolton"
elif(bra=="turta"):
	p="Tully"
print("Entrada:", bra)	
print("Casa:", p)
else:
	print("Entrada:", bra)
	print("Brasao invalido")


	
-- ERROR:
File "XXXX", line 23
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:38:22) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
elif(bra=="leao"):
	p="Lannister"
elif(bra=="veado"):
	p="Baratheon"
elif(bra=="dragao"):
	p="Targaryen"
elif(bra=="rosa"):
	p="Tyrell"
elif(bra=="sol"):
	p="Martell"
elif(bra=="lula"):
	p="Greyjoy"
elif(bra=="esfolado"):
	p="Bolton"
elif(bra=="turta"):
	p="Tully"
print("Entrada:", bra)	
print("Casa:", p)

else:
	print("Entrada:", bra)
	print("Brasao invalido")


	
-- ERROR:
File "XXXX", line 24
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:38:31) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
elif(bra=="leao"):
	p="Lannister"
elif(bra=="veado"):
	p="Baratheon"
elif(bra=="dragao"):
	p="Targaryen"
elif(bra=="rosa"):
	p="Tyrell"
elif(bra=="sol"):
	p="Martell"
elif(bra=="lula"):
	p="Greyjoy"
elif(bra=="esfolado"):
	p="Bolton"
elif(bra=="turta"):
	p="Tully"
print("Entrada:", bra)	
print("Casa:", p)

else:
	print("Entrada:", bra)
	print("Brasao invalido")


	
-- ERROR:
File "XXXX", line 24
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:50:07) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="leao"):
	p="Lannister"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="rosa"):
	p="Tyrell"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="lula"):
	p="Greyjoy"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
	
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 5
    print("Entrada:", bra)	
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 18:51:24) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="leao"):
	p="Lannister"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="rosa"):
	p="Tyrell"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="lula"):
	p="Greyjoy"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 5
    print("Entrada:", bra)	
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:17:00) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="leao"):
	p="Lannister"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="rosa"):
	p="Tyrell"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="lula"):
	p="Greyjoy"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- EXECUTION TIME:
0.156588
-- ERROR:
  File "/home/codebench/codes/1692/1105/main.py", line 5
    print("Entrada:", bra)	
                          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:19:26) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:19:42) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:20:04) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 7
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:20:18) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:20:27) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:20:54) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:20:55) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:20:58) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- EXECUTION TIME:
0.151794
-- ERROR:
  File "/home/codebench/codes/1692/1105/main.py", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:21:02) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:21:36) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:16) 
-- CODE:
bra=input("bra")

if(bra=="lobo"):
	p="Stark"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 6
    print("Casa:", p)
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:33) 
-- CODE:
bra=input("bra")


	
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 7
    elif(bra=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:34) 
-- CODE:
bra=input("bra")


	
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 7
    elif(bra=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:34) 
-- CODE:
bra=input("bra")


	
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 7
    elif(bra=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:36) 
-- CODE:
bra=input("bra")


	
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 7
    elif(bra=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:37) 
-- CODE:
bra=input("bra")


	
	
   
elif(bra=="leao"):
	p="Lannister"
	print("Entrada:", bra)	
   print("Casa:", p)
   
	
elif(bra=="veado"):
	p="Baratheon"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="dragao"):
	p="Targaryen"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="rosa"):
	p="Tyrell"
	print("Entrada:", bra)	
   print("Casa:", p)
   
elif(bra=="sol"):
	p="Martell"
	print("Entrada:", bra)	
   print("Casa:", p)
	
	
elif(bra=="lula"):
	p="Greyjoy"
	print("Entrada:", bra)	
   print("Casa:", p)
 
	
elif(bra=="esfolado"):
	p="Bolton"
   print("Entrada:", bra)	
   print("Casa:", p)
	
elif(bra=="turta"):
	p="Tully"
	print("Entrada:", bra)	
   print("Casa:", p)
	
else:
   print("Entrada:", bra)	
   print("Brasao invalido")
	


	
-- ERROR:
File "XXXX", line 7
    elif(bra=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:34:20) 
-- CODE:
x=input("bra")

if(x=="lobo"):
	h="Stark"
	print("Entrada:", x)
	print("Casa:", h)

elif(x=="leao"):
	h="Lannister"
	print("Entrada:", x)
	print("Casa:", h)
	
elif(x=="veado"):
	h="Baratheon"
	print("Entrada:", x)
	print("Casa:", h)

elif(x=="dragao"):
	h="Targaryen"
	print("Entrada:", x)
	print("Casa:", h)
	
	
	


	
-- ERROR:
File "XXXX", line 7
    elif(bra=="leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:39:51) 
-- CODE:
x=input("bra")

if(x=="lobo"):
	h="Stark"
	print("Entrada:", x)
	print("Casa:", h)

elif(x=="leao"):
	h="Lannister"
	print("Entrada:", x)
	print("Casa:", h)
	
elif(x=="veado"):
	h="Baratheon"
	print("Entrada:", x)
	print("Casa:", h)

elif(x=="dragao"):
	h="Targaryen"
	print("Entrada:", x)
	print("Casa:", h)

elif(x=="rosa"):
	h="Tyrell"
	print("Entrada:", x)
	print("Casa:", h)

elif(x=="sol"):
	h="Martell"
	print("Entrada:", x)
	print("Casa:", h)
	
elif(x=="lula"):
	h="Greyjoy"
	print("Entrada:", x)
	print("Casa:", h)
	
elif(x=="esfolado"):
	h="Bolton"
	print("Entrada:", x)
	print("Casa:", h)
	
elif(x=="turta"):
	h="Tully"
	print("Entrada:", x)
	print("Casa:", h)
	
else:
	print("Entrada:", x)
	print("Brasao invalido")
	
	
	
	
	
	

	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	
	


	
-- EXECUTION TIME:
0.19182
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
